RESOLVED FIXED274084
Fill layer pattern for mask-mode is not correctly applied
https://bugs.webkit.org/show_bug.cgi?id=274084
Summary Fill layer pattern for mask-mode is not correctly applied
Antti Koivisto
Reported 2024-05-13 06:17:43 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-13 06:17:57 PDT
Antti Koivisto
Comment 2 2024-05-13 06:22:09 PDT
EWS
Comment 3 2024-05-13 11:13:47 PDT
Committed 278698@main (ec2c8756e6a2): <https://commits.webkit.org/278698@main> Reviewed commits have been landed. Closing PR #28472 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.