Fill layer pattern for mask-mode is not correctly applied https://bugs.webkit.org/show_bug.cgi?id=274084 rdar://127999241

Reviewed by Tim Nguyen.

* LayoutTests/fast/masking/parsing-mask-mode.html:
* LayoutTests/fast/masking/parsing-mask-mode-expected.txt:

New results match other browsers.

* LayoutTests/fast/masking/parsing-mask-source-type-expected.txt:
* LayoutTests/fast/masking/parsing-mask-source-type.html:

* Source/WebCore/rendering/style/FillLayer.cpp:
(WebCore::FillLayer::fillUnsetProperties):

Fill unset mask-mode with a pattern similar to other fill layer properties.

Canonical link: https://commits.webkit.org/278698@main